--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,4 +9,5 @@ html
     script(src='bower_components/underscore/underscore-min.js')
     script(src='bower_components/backbone/backbone.js')
     script(src='javascripts/model.js')
+    script(src='javascripts/view.js')
       
