--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(charset="utf-8")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
@@ -8,6 +9,10 @@ html
     script(src='bower_components/jquery/dist/jquery.min.js')
     script(src='bower_components/underscore/underscore-min.js')
     script(src='bower_components/backbone/backbone.js')
-    script(src='javascripts/model.js')
-    script(src='javascripts/view.js')
+    script(src='javascripts/models/todo.js')
+    script(src='javascripts/collections/todos.js')
+    script(src='javascripts/views/todos.js')
+    script(src='javascripts/views/app.js')
+    script(src='javascripts/routers/router.js')
+    script(src='javascripts/app.js')
       
