--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
   </section>
   <div id="info">
     <p> Double-click to edit a todo</p>
-    <p> Written by giorgix</p>
+    <p> Written by Giorgix</p>
   </div>
 
   <script type="text/template" id="item-template">
