--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -40,14 +40,14 @@
     <% } %>
   </script>
 
-  <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" />
-  <script src="bower_components/underscore/underscore-min.js" type="text/javascript" />
-  <script src="bower_components/backbone/backbone.js" type="text/javascript" />
-  <script src="bower_components/backbone.localstorage/backbone.localStorage.js" type="text/javascript" />
-  <script src="javascripts/models/todo.js" type="text/javascript" />
-  <script src="javascripts/collections/todos.js" type="text/javascript" />
-  <script src="javascripts/views/todos.js" type="text/javascript" />
-  <script src="javascripts/views/app.js" type="text/javascript" />
-  <script src="javascripts/routers/router.js" type="text/javascript" />
-  <script src="javascripts/app.js" type="text/javascript" />
+  <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" ></script>
+  <script src="bower_components/underscore/underscore.js" type="text/javascript"></script>
+  <script src="bower_components/backbone/backbone.js" type="text/javascript"></script>
+  <script src="bower_components/backbone.localstorage/backbone.localStorage.js" type="text/javascript"></script>
+  <script src="javascripts/models/todo.js" type="text/javascript"></script>
+  <script src="javascripts/collections/todos.js" type="text/javascript"></script>
+  <script src="javascripts/views/todos.js" type="text/javascript"></script>
+  <script src="javascripts/views/app.js" type="text/javascript"></script>
+  <script src="javascripts/routers/router.js" type="text/javascript"></script>
+  <script src="javascripts/app.js" type="text/javascript"></script>
  
