--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,7 +35,7 @@
         <a href="#/active"> Active</a>
       <li>
         <a href="#/completed"> Completed</a>
-    <% if  completed> { %>
+    <% if  (completed) { %>
     <button id="clear-completed"> Clear completed (<%= completed %>)</button>
     <% } %>
   </script>
